--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: sans-serif;
+  background: #dcc39f;
+  margin: 0;
+  -webkit-user-select: none;
+     -moz-user-select: -moz-none;
+      -ms-user-select: none;
+          user-select: none;
+}
+html,body {
+  width: 100%;
+  height: 100%;
+  min-width: 350px;
+  overflow: hidden;
+}
